--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,12 @@
 {
+  "env": {
+    "node": true,
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module"
+  },
   "extends": [ "semistandard", "eslint:recommended" ],
   "rules": {
     "no-console": 0,
@@ -9,9 +17,5 @@
     "handle-callback-err": 2,
     "consistent-return": 2,
     "comma-dangle": 2
-  },
-  "env": {
-    "browser": true,
-    "es6": true
-  },
+  }
 }
