--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/halkeye/bamboohr-employee-stats#readme",
   "dependencies": {
+    "async-to-gen": "^1.1.3",
     "confluence-api": "^1.1.0",
     "es6-promisify-all": "^0.1.0",
     "geocoder": "^0.2.2",
@@ -27,10 +28,14 @@
     "xml-parser": "^1.2.1"
   },
   "devDependencies": {
-    "eslint": "^3.4.0",
+    "eslint": "^3.6.1",
+    "eslint-config-airbnb": "^12.0.0",
     "eslint-config-semistandard": "^7.0.0",
-    "eslint-config-standard": "^6.0.0",
+    "eslint-config-standard": "^6.1.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-standard": "^2.0.0"
+    "eslint-plugin-react": "^6.3.0",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
