--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "ecmaVersion": 2017,
     "sourceType": "module"
   },
-  "extends": [ "semistandard", "eslint:recommended" ],
+  "extends": [ "standard", "eslint:recommended" ],
   "rules": {
     "no-console": 0,
     "no-unused-vars": [2],
@@ -16,6 +16,8 @@
     "eqeqeq": 2,
     "handle-callback-err": 2,
     "consistent-return": 2,
-    "comma-dangle": 2
+    "comma-dangle": 2,
+    "semi": [2, "always"],
+    "no-extra-semi": 2
   }
 }
